# Rhogue

./: README.md  TAGS  level.txt  notes.org  rhogue.cabal  stack.yaml
app/: Main.hs
src/: Actor.hs  Effect.hs  GameState.hs  Level.hs
src/AI/Bot/: BackAndForth.hs
