name:                rhogue
version:             0.1.0.0
synopsis:            A small roguelike
description:         Please see README.md
homepage:            https://github.com/githubuser/rhogue#readme
license:             MIT
license-file:        LICENSE.md
author:              Christian Fischer
maintainer:          christian@chfi.se
copyright:           2016 Christian Fischer
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Actor
                     , GameState
                     , Level
  build-depends:       base >= 4.7 && < 5
                     , ncurses
                     , transformers
                     , text
                     , listsafe
                     , containers
                     , pqueue
  default-language:    Haskell2010

executable rhogue
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rhogue
                     , ncurses
                     , listsafe
                     , transformers
                     , text
  default-language:    Haskell2010

test-suite rhogue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rhogue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chfi/rhogue
